# scip_parser

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: QUICK_START_DEFINITIONS.md  logging.md
examples/: basic_usage.py  debug_logging_example.py  demo_logging.py  find_definitions.py  list_all_symbols.py  simple_api.py
scripts/: README.md  clean.py  create_call_graph_scip.py  create_hierarchy_scip.py  create_simple_scip.py  manage_proto.py
src/scip_parser/: __init__.py
src/scip_parser/core/: parser.py  types.py
src/scip_parser/enrich/: __init__.py  adapter.py  enricher.py  provider.py
src/scip_parser/graph/: call_graph.py  dependency_graph.py  inheritance_graph.py
src/scip_parser/proto/: __init__.py  scip_pb2.py  scip_pb2.pyi
src/scip_parser/query/: __init__.py  api.py  call_sites.py  filters.py  search.py
src/scip_parser/utils/: __init__.py  cache.py  documentation.py  logging_config.py  signature.py  symbol.py
tests/: conftest.py  test_benchmark.py  test_cache.py  test_call_graph.py  test_conftest_fixture.py  test_dependency_graph.py  test_enricher.py  test_filters.py  test_graph_builders_real.py  test_index_analytics.py  test_index_hierarchy.py  test_index_relationships.py  test_index_relationships_real.py  test_index_search.py  test_inheritance_graph.py  test_inheritance_graph_advanced.py  test_logging.py  test_parser.py  test_query_api.py  test_query_api_real.py  test_real_world_scip.py  test_scip_fixtures.py  test_search.py  test_signature_doc.py  test_symbol.py  test_symbol_parser.py  test_types.py
tests/fixtures/: test_call_graph.scip  test_hierarchy.scip  test_simple.scip
