[project]
name = "scip-parser"
version = "0.1.0"
description = "High-performance SCIP (Source Code Intelligence Protocol) parser for Python"
authors = [
    {name = "natsuboy", email = "maintainers@scip-parser.org"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
keywords = ["scip", "code-intelligence", "parser", "static-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "protobuf>=6.33.4",
    "networkx>=3.6.1",
    "typing-extensions>=4.15.0",
    "mypy-protobuf>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-benchmark>=5.2.3",
    "black>=26.1.0",
    "mypy>=1.19.1",
    "ruff>=0.14.14",
    "types-protobuf>=6.32.1.20251210",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
    "types-networkx>=3.6.1.20251220",
]
